--- a/assets/admin.html
+++ b/assets/admin.html
@@ -19,6 +19,9 @@
     .log-actions .btn{
       margin-right: 10px;
     }
+    .panel-default table code {
+      word-break: break-all;
+    }
     .panel-title > a{
       cursor: default;
       text-decoration:none;
